# brush_outline

./: CMakeLists.txt  res.qrc  window.cpp  window.h
